doc: Add alternative themed NumberInput components with various features

--- a/app/date-picker/@dev/page.mdx
+++ b/app/date-picker/@dev/page.mdx
@@ -81,66 +81,71 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Alternative
 
-<div className="bg-[var(--background-alternative)] p-4 rounded-md flex flex-col gap-4">
-
 ### Neutral
 
-<CodePreview paths={['date-picker', 'DatePickerLocaleVnPlaceholderChonNgayAlternative']}>
+<CodePreview paths={['date-picker', 'DatePickerLocaleVnPlaceholderChonNgayAlternative']} theme='alternative'>
   <Demo.DatePickerLocaleVnPlaceholderChonNgayAlternative />
 </CodePreview>
 
 ### Accent
 
-<CodePreview paths={['date-picker', 'DatePickerColorAccentThemeAlternative']}>
+<CodePreview paths={['date-picker', 'DatePickerColorAccentThemeAlternative']} theme='alternative'>
   <Demo.DatePickerColorAccentThemeAlternative />
 </CodePreview>
 
 ### Readonly
 
-<CodePreview paths={['date-picker', 'DatePickerReadOnlyThemeAlternative']}>
+<CodePreview paths={['date-picker', 'DatePickerReadOnlyThemeAlternative']} theme='alternative'>
   <Demo.DatePickerReadOnlyThemeAlternative />
 </CodePreview>
 
 ### Disabled
 
-<CodePreview paths={['date-picker', 'DatePickerDisabledThemeAlternative']}>
+<CodePreview paths={['date-picker', 'DatePickerDisabledThemeAlternative']} theme='alternative'>
   <Demo.DatePickerDisabledThemeAlternative />
 </CodePreview>
 
 ## Options
 
-<CodePreview paths={['date-picker', 'DatePickerWithOptionsPlaceholderLocaleOptionsRangeAlternative']}>
+<CodePreview
+  paths={['date-picker', 'DatePickerWithOptionsPlaceholderLocaleOptionsRangeAlternative']}
+  theme='alternative'
+>
   <Demo.DatePickerWithOptionsPlaceholderLocaleOptionsRangeAlternative />
 </CodePreview>
 
-<CodePreview paths={['date-picker', 'DatePickerWithOptionsOptionsShowMonths2Alternative']}>
+<CodePreview paths={['date-picker', 'DatePickerWithOptionsOptionsShowMonths2Alternative']} theme='alternative'>
   <Demo.DatePickerWithOptionsOptionsShowMonths2Alternative />
 </CodePreview>
 
-<CodePreview paths={['date-picker', 'DatePickerLocaleVnOptionsEnableTimeAlternative']}>
+<CodePreview paths={['date-picker', 'DatePickerLocaleVnOptionsEnableTimeAlternative']} theme='alternative'>
   <Demo.DatePickerLocaleVnOptionsEnableTimeAlternative />
 </CodePreview>
 
-<CodePreview paths={['date-picker', 'DatePickerWithOptionsIsErrorErrorMessageOptionsAllowInputAlternative']}>
+<CodePreview
+  paths={['date-picker', 'DatePickerWithOptionsIsErrorErrorMessageOptionsAllowInputAlternative']}
+  theme='alternative'
+>
   <Demo.DatePickerWithOptionsIsErrorErrorMessageOptionsAllowInputAlternative />
 </CodePreview>
 
 ## Floating label
 
-<CodePreview paths={['date-picker', 'LabelDatePickerSideIconLeftIsErrorErrorMessageAlternative']}>
+<CodePreview paths={['date-picker', 'LabelDatePickerSideIconLeftIsErrorErrorMessageAlternative']} theme='alternative'>
   <Demo.LabelDatePickerSideIconLeftIsErrorErrorMessageAlternative />
 </CodePreview>
 
 ## Sizes
 
-<CodePreview paths={['date-picker', 'DatePickerColorAccentSideIconLeftThemeAlternative']}>
+<CodePreview paths={['date-picker', 'DatePickerColorAccentSideIconLeftThemeAlternative']} theme='alternative'>
   <Demo.DatePickerColorAccentSideIconLeftThemeAlternative />
 </CodePreview>
 
-<CodePreview paths={['date-picker', 'DatePickerColorAccentSideIconLeftInputSizeSmThemeAlternative']}>
+<CodePreview
+  paths={['date-picker', 'DatePickerColorAccentSideIconLeftInputSizeSmThemeAlternative']}
+  theme='alternative'
+>
   <Demo.DatePickerColorAccentSideIconLeftInputSizeSmThemeAlternative />
 </CodePreview>
-
-</div>
 
 <div className='h-96'></div>
