--- a/app/password-input/@dev/page.mdx
+++ b/app/password-input/@dev/page.mdx
@@ -85,74 +85,39 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Alternative
 
-<div className="bg-[var(--background-alternative)] p-4 rounded-md flex flex-col gap-4">
-
-<CodePreview paths={['password-input', 'BasicPasswordInputAlternative']}>
+<CodePreview paths={['password-input', 'BasicPasswordInputAlternative']} theme='alternative'>
   <Demo.BasicPasswordInputAlternative />
 </CodePreview>
-<CodePreview paths={['password-input', 'BasicPasswordInputWithLeftIconAlternative']}>
+<CodePreview paths={['password-input', 'BasicPasswordInputWithLeftIconAlternative']} theme='alternative'>
   <Demo.BasicPasswordInputWithLeftIconAlternative />
 </CodePreview>
 
 ## Clearable
 
-<CodePreview paths={['password-input', 'ClearablePasswordInputAlternative']}>
+<CodePreview paths={['password-input', 'ClearablePasswordInputAlternative']} theme='alternative'>
   <Demo.ClearablePasswordInputAlternative />
 </CodePreview>
-<CodePreview paths={['password-input', 'ClearablePasswordInputWithLeftIconAccentAlternative']}>
+<CodePreview paths={['password-input', 'ClearablePasswordInputWithLeftIconAccentAlternative']} theme='alternative'>
   <Demo.ClearablePasswordInputWithLeftIconAccentAlternative />
 </CodePreview>
 
 ## States
 
-<CodePreview paths={['password-input', 'ErrorPasswordInputAlternative']}>
+<CodePreview paths={['password-input', 'ErrorPasswordInputAlternative']} theme='alternative'>
   <Demo.ErrorPasswordInputAlternative />
 </CodePreview>
-<CodePreview paths={['password-input', 'ErrorPasswordInputWithLeftIconAccentAlternative']}>
+<CodePreview paths={['password-input', 'ErrorPasswordInputWithLeftIconAccentAlternative']} theme='alternative'>
   <Demo.ErrorPasswordInputWithLeftIconAccentAlternative />
 </CodePreview>
-<CodePreview paths={['password-input', 'DisabledClearablePasswordInputAccentAlternative']}>
+<CodePreview paths={['password-input', 'DisabledClearablePasswordInputAccentAlternative']} theme='alternative'>
   <Demo.DisabledClearablePasswordInputAccentAlternative />
-</CodePreview>
-<CodePreview paths={['password-input', 'DisabledClearablePasswordInputWithLeftIconDefaultShownAlternative']}>
-  <Demo.DisabledClearablePasswordInputWithLeftIconDefaultShownAlternative />
-</CodePreview>
-<CodePreview paths={['password-input', 'DisabledClearablePasswordInputWithLeftIconDefaultShownAlternative']}>
-  <Demo.DisabledClearablePasswordInputWithLeftIconDefaultShown
-    leftIcon={<KeyRound />}
-    defaultHidden={false}
-    theme='alternative'
-  />
-</CodePreview>
-<CodePreview paths={['password-input', 'DisabledClearablePasswordInputWithLeftIconDefaultShownAlternative']}>
-  <Demo.DisabledClearablePasswordInputWithLeftIconDefaultShown
-    leftIcon={<KeyRound />}
-    defaultHidden={false}
-    theme='alternative'
-  />
 </CodePreview>
 
 ## Floating label
 
-<CodePreview paths={['password-input', 'BasicPasswordInputAlternativeFloatingLabel']}>
+<CodePreview paths={['password-input', 'BasicPasswordInputAlternativeFloatingLabel']} theme='alternative'>
   <Demo.BasicPasswordInputAlternativeFloatingLabel />
 </CodePreview>
-<CodePreview paths={['password-input', 'BasicPasswordInputWithLeftIconAlternativeFloatingLabel']}>
+<CodePreview paths={['password-input', 'BasicPasswordInputWithLeftIconAlternativeFloatingLabel']} theme='alternative'>
   <Demo.BasicPasswordInputWithLeftIconAlternativeFloatingLabel />
 </CodePreview>
-<CodePreview paths={['password-input', 'ErrorPasswordInputAlternativeFloatingLabel']}>
-  <Demo.ErrorPasswordInputAlternativeFloatingLabel />
-</CodePreview>
-<CodePreview paths={['password-input', 'ErrorPasswordInputWithLeftIconAccentAlternativeFloatingLabel']}>
-  <Demo.ErrorPasswordInputWithLeftIconAccentAlternativeFloatingLabel />
-</CodePreview>
-<CodePreview paths={['password-input', 'DisabledClearablePasswordInputAccentAlternativeFloatingLabel']}>
-  <Demo.DisabledClearablePasswordInputAccentAlternativeFloatingLabel />
-</CodePreview>
-<CodePreview
-  paths={['password-input', 'DisabledClearablePasswordInputWithLeftIconDefaultShownAlternativeFloatingLabel']}
->
-  <Demo.DisabledClearablePasswordInputWithLeftIconDefaultShownAlternativeFloatingLabel />
-</CodePreview>
-
-</div>
