--- a/app/pinfield/@dev/page.mdx
+++ b/app/pinfield/@dev/page.mdx
@@ -39,42 +39,38 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Alternative
 
-<div className="bg-[var(--background-alternative)] p-4 rounded-md flex flex-col gap-4">
-
 ### Basic
 
-<CodePreview paths={['pinfield', 'BasicPINFieldAlternative']}>
+<CodePreview paths={['pinfield', 'BasicPINFieldAlternative']} theme='alternative'>
   <Demo.BasicPINFieldAlternative />
 </CodePreview>
 
 ### Groups
 
-<CodePreview paths={['pinfield', 'GroupsPINFieldAlternative']}>
+<CodePreview paths={['pinfield', 'GroupsPINFieldAlternative']} theme='alternative'>
   <Demo.GroupsPINFieldAlternative />
 </CodePreview>
 
 ### Masked
 
-<CodePreview paths={['pinfield', 'MaskedPINFieldAlternative']}>
+<CodePreview paths={['pinfield', 'MaskedPINFieldAlternative']} theme='alternative'>
   <Demo.MaskedPINFieldAlternative />
 </CodePreview>
 
 ### Sizes
 
-<CodePreview paths={['pinfield', 'SizePINFieldAlternative']}>
+<CodePreview paths={['pinfield', 'SizePINFieldAlternative']} theme='alternative'>
   <Demo.SizePINFieldAlternative />
 </CodePreview>
 
 ### States
 
-<CodePreview paths={['pinfield', 'StatePINFieldAlternative']}>
+<CodePreview paths={['pinfield', 'StatePINFieldAlternative']} theme='alternative'>
   <Demo.StatePINFieldAlternative />
 </CodePreview>
 
 ### Custom
 
-<CodePreview paths={['pinfield', 'CustomPINFieldAlternative']}>
+<CodePreview paths={['pinfield', 'CustomPINFieldAlternative']} theme='alternative'>
   <Demo.CustomPINFieldAlternative />
 </CodePreview>
-
-</div>
