--- a/app/search-input/@dev/page.mdx
+++ b/app/search-input/@dev/page.mdx
@@ -139,7 +139,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Basic (Alternative)
 
-<CodePreview paths={['search-input', 'BasicSearchInput']}>
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
   <Demo.BasicSearchInput theme='alternative' />
 </CodePreview>
 <CodePreview paths={['search-input', 'BasicSearchInputClearableSearchButtonAlternative']}>
@@ -154,7 +154,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Auxiliary (Alternative)
 
-<CodePreview paths={['search-input', 'AuxiliarySearchInput']}>
+<CodePreview paths={['search-input', 'AuxiliarySearchInput']} theme="alternative">
   <Demo.AuxiliarySearchInput theme='alternative' />
 </CodePreview>
 <CodePreview paths={['search-input', 'AuxiliarySearchInputClearableSearchButton']}>
@@ -169,40 +169,40 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## ShortCut Indicator (Alternative)
 
-<CodePreview paths={['search-input', 'BasicSearchInput']}>
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
   <Demo.BasicSearchInput shortCut='Shift + K' theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInput']}>
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
   <Demo.BasicSearchInput isClearable shortCut='Shift + K' theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInput']}>
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
   <Demo.BasicSearchInput isClearable shortCut='Shift + K' theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInput']}>
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
   <Demo.BasicSearchInput isPending shortCut='Shift + K' theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInput']}>
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
   <Demo.BasicSearchInput isPending shortCut='Shift + K' theme='alternative' />
 </CodePreview>
 
 ## States (Alternative)
 
-<CodePreview paths={['search-input', 'BasicSearchInputErrorClearable']}>
+<CodePreview paths={['search-input', 'BasicSearchInputErrorClearable']} theme="alternative">
   <Demo.BasicSearchInputErrorClearable theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputErrorShortCut']}>
+<CodePreview paths={['search-input', 'BasicSearchInputErrorShortCut']} theme="alternative">
   <Demo.BasicSearchInputErrorShortCut theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputDisabledShortCut']}>
+<CodePreview paths={['search-input', 'BasicSearchInputDisabledShortCut']} theme="alternative">
   <Demo.BasicSearchInputDisabledShortCut theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputDisabledSearchButton']}>
+<CodePreview paths={['search-input', 'BasicSearchInputDisabledSearchButton']} theme="alternative">
   <Demo.BasicSearchInputDisabledSearchButton theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputReadOnlySearchButton']}>
+<CodePreview paths={['search-input', 'BasicSearchInputReadOnlySearchButton']} theme="alternative">
   <Demo.BasicSearchInputReadOnlySearchButton theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputReadOnlyPendingShortCut']}>
+<CodePreview paths={['search-input', 'BasicSearchInputReadOnlyPendingShortCut']} theme="alternative">
   <Demo.BasicSearchInputReadOnlyPendingShortCut theme='alternative' />
 </CodePreview>
 
