doc: update doc

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,68 +1,93 @@
 # Changelog
 
+## Version 0.2.0:
+
+- New features:
+
+  - Avatar: core features with tokens
+  - Table: core features with tokens
+  - Date Picker: core features with tokens
+  - PIN Field: core features with tokens
+  - File Input: core features with tokens
+  - Slider: core features with tokens
+  - Tabs: core features with tokens
+  - Tree Navigation: core features with tokens
+  - Content Navigation: core features with tokens
+  - Pagination: core features with tokens
+  - Progress Bar: core features with tokens
+
+- Changes:
+  - Update dependencies to latest versions
+  - Refactor component structure for better maintainability
+  - Tooltip: core features with tokens
+  - New npm scripts for development and publishing workflow
+- Fixes:
+  - Improve build process and output structure
+  - Minor bug fixes and optimizations
+
 ## Version 0.1.6:
 
-- New feature: 
-    - Inline Link: core features with tokens
-    - Breadcrumb: core features with tokens
-    - Tooltip: core features with tokens
-    - Search Input: core features with tokens
-    - Email Input: core features with tokens
-    - Textarea: core features with tokens
+- New feature:
+  - Inline Link: core features with tokens
+  - Breadcrumb: core features with tokens
+  - Tooltip: core features with tokens
+  - Search Input: core features with tokens
+  - Email Input: core features with tokens
+  - Textarea: core features with tokens
 - Change:
-    - Available components: add new components
+  - Available components: add new components
 - Fix:
-    - Optimize input components
+  - Optimize input components
 
 ## Version 0.1.4:
 
-- New feature: 
-    - Tag: core features, extend from Chip (input)
-    - Dot: core features
-    - Badge: core features
-    - Corner Indicator: core features 
+- New feature:
+  - Tag: core features, extend from Chip (input)
+  - Dot: core features
+  - Badge: core features
+  - Corner Indicator: core features
 - Change:
-    - Color: update v2 color
-    - Plugins: generate variables based on tailwincss theme config
+  - Color: update v2 color
+  - Plugins: generate variables based on tailwincss theme config
 - Fix:
-    - Prevent override css from resetting css from tailwindcss
+  - Prevent override css from resetting css from tailwindcss
 
 ## Version 0.1.3:
 
-- New feature: 
-    - Switch: core features
-    - Select: 2 types of select (custom/native) from menu 
-    - Menu: renamed from dropdown, core features
-    - Chip: core features
-    - Checkbox: core features, group checkbox, nested group
-    - Radio: core features, group radio
+- New feature:
+  - Switch: core features
+  - Select: 2 types of select (custom/native) from menu
+  - Menu: renamed from dropdown, core features
+  - Chip: core features
+  - Checkbox: core features, group checkbox, nested group
+  - Radio: core features, group radio
 - Change:
-    - Button: split to kind and color instead of variants
-    - Accordion: no longer extends from radix
+  - Button: split to kind and color instead of variants
+  - Accordion: no longer extends from radix
 
 ## Version 0.1.2:
 
 - Change:
-    - Base component: create factory to help extend a component props
+  - Base component: create factory to help extend a component props
 - Fix:
-    - Portal: z-index
-    - Modal: z-index
-    - Dropdown: controlled by isOpen props
+  - Portal: z-index
+  - Modal: z-index
+  - Dropdown: controlled by isOpen props
 
 ## Version 0.1.1:
 
-- New feature: 
-    - Base component: core (with custom tag/component)
-    - Portal: core
+- New feature:
+  - Base component: core (with custom tag/component)
+  - Portal: core
 - Change:
-    - Modal: create by Portal
-    - Toast: toast container create by Portal
-    - Button: extend Base component
-    - Chip: extend Base component
+  - Modal: create by Portal
+  - Toast: toast container create by Portal
+  - Button: extend Base component
+  - Chip: extend Base component
 - Fix:
-    - Button: fix disable props
-    - Toast: fix type
-    - DatePicker: fix type, default disableMobile
+  - Button: fix disable props
+  - Toast: fix type
+  - DatePicker: fix type, default disableMobile
 
 ## Version 0.0.9:
 
