doc: fix client rendering , format code

--- a/app/accordion/@dev/page.mdx
+++ b/app/accordion/@dev/page.mdx
@@ -1,5 +1,10 @@
 import * as Demo from '@public/demo/accordion';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
+
+## Basic Accordion
 
 <CodePreview paths={['accordion', 'BasicAccordion']}>
   <Demo.BasicAccordion />
