--- a/app/accordion/@spec/page.mdx
+++ b/app/accordion/@spec/page.mdx
@@ -3,10 +3,9 @@ import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import imageSrc from '@public/images/accordion';
 import * as Demo from '@public/demo/accordion';
+import TableOfContents from '@components/doc/TableOfContents';
 
-:::callout[note]
-A component that organizes content into vertically stacked collapsible and expandable sections.
-:::
+<TableOfContents />
 
 <Image src={imageSrc.accordion} alt='accordion' />
 
